--- a/homesite/application.yaml
+++ b/homesite/application.yaml
@@ -4,12 +4,14 @@ kind: Application
 metadata:
   name: homesite
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
   labels:
     name: homesite
 spec:
   project: default
   source:
-    repoURL: https://github.com/kendopx/argocd-config-demo.git
+    repoURL: https://github.com/daveasam141/argocd-config-demo.git
     targetRevision: HEAD 
     path: homesite
   destination:
@@ -20,7 +22,7 @@ spec:
       prune: true 
       selfHeal: true
       allowEmpty: false 
-    syncOptions:    
+    syncOptions: 
     - Validate=true 
     - CreateNamespace=true 
     - PrunePropagationPolicy=foreground 
