--- a/homesite/application.yaml
+++ b/homesite/application.yaml
@@ -20,7 +20,7 @@ spec:
       allowEmpty: false
     syncOptions:
     - Validate=true
-    - CreateNamespace=true
+#     - CreateNamespace=true
     - PrunePropagationPolicy=foreground
     - PruneLast=true
     retry:
