--- a/homesite/deployment.yaml
+++ b/homesite/deployment.yaml
@@ -1,77 +1,72 @@
----
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: homesite
-
+  name: homesite
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: homesite
-  namespace: homesite
-  labels:
-    app: homesite
+  name: homesite
+  namespace: homesite
+  labels:
+    app: homesite
 spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: homesite
-  template:
-    metadata:
-      labels:
-        app: homesite
-    spec:
-      containers:
-      - name: homesite
-        image: swilliamx/homesite:latest
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 80
-          protocol: TCP
+  replicas: 3
+  selector:
+    matchLabels:
+      app: homesite
+  template:
+    metadata:
+      labels:
+        app: homesite
+    spec:
+      containers:
+      - name: homesite
+        image: swilliamx/homesite:latest
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 80
+          protocol: TCP
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: homesite
-  namespace: homesite
-  labels:
-    app: homesite
-  annotations:
-    external-dns.alpha.kubernetes.io/hostname: homesite.2waveyy.com
+  name: homesite
+  namespace: homesite
+  labels:
+    app: homesite
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: homesite.solvweb.net
 spec:
-  type: ClusterIP
-  ports:
-  - port: 80
-    name: http
-    targetPort: 80
-  selector:
-    app: homesite
+  type: ClusterIP
+  ports:
+  - port: 80
+    name: http
+    targetPort: 80
+  selector:
+    app: homesite
+
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: homesite
-  namespace: homesite
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    alb.ingress.kubernetes.io/scheme: internet-facing
-    external-dns.alpha.kubernetes.io/hostname: homesite.2waveyy.com
-    cert-manager.io/cluster-issuer: letsencrypt-staging
+  name: homesite
+  namespace: homesite
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    external-dns.alpha.kubernetes.io/hostname: homesite.solvweb.net
 spec:
-  ingressClassName: nginx
-  rules:
-    - host: homesite.2waveyy.com
-      http:
-        paths:
-        - path: /
-          pathType: Prefix
-          backend:
-            service:
-              name: homesite
-              port:
-                number: 80
-  # tls:
-  #   - secretName: homesite-tls
-  #     hosts:
-  #       - homesite.2waveyy.com
+  ingressClassName: nginx
+  rules:
+    - host: homesite.solvweb.net
+      http:
+        paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: homesite
+              port:
+                number: 80
+
