--- a/homesite/deployment.yaml
+++ b/homesite/deployment.yaml
@@ -36,7 +36,7 @@ metadata:
   labels:
     app: homesite
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: homesite.solvweb.net
+    external-dns.alpha.kubernetes.io/hostname: homesite.2waveyyy.com
 spec:
   type: ClusterIP
   ports:
@@ -55,11 +55,11 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     alb.ingress.kubernetes.io/scheme: internet-facing
-    external-dns.alpha.kubernetes.io/hostname: homesite.solvweb.net
+    external-dns.alpha.kubernetes.io/hostname: homesite.2waveyyy.com
 spec:
   ingressClassName: nginx
   rules:
-    - host: homesite.solvweb.net
+    - host: homesite.2waveyyy.com
       http:
         paths:
         - path: /
