--- a/homesite/application.yaml
+++ b/homesite/application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/daveasam141/argocd-config-demo.git
-    targetRevision: HEAD
+    targetRevision: argocdbranch
     path: homesite
   destination: 
     server: https://kubernetes.default.svc
