There's an intentional error in the deployment file line 25

--- a/homesite/deployment.yaml
+++ b/homesite/deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: homesite
-        image: swilliamx/homesite:latest
+        image: swilliamx/homesite:latest3
         imagePullPolicy: Always
         ports:
         - containerPort: 80
