--- a/homesite/deployment.yaml
+++ b/homesite/deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: homesite
-        image: swilliamx/homesite:latest3
+        image: whatstheword
         imagePullPolicy: Always
         ports:
         - containerPort: 80
